--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,10 +1,16 @@
-name: learn-github-actions
-on: [push]
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  example-job:
+    name: Save output
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      - shell: bash
+        run: |
+          expr 1 + 1 > output.log
+      - shell: bash
+        run: |
+          echo "########"
+          cat output.log
+      - name: Upload output file
+        uses: actions/upload-artifact@v1
+        with:
+          name: output-log-file
+          path: output.log
