--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,19 +2,20 @@ name: Super-Linter
 
 # Run this workflow every time a new commit pushed to your repository
 on: push
-  jobs:
-    example-job:
-      name: Save output
-      steps:
-        - shell: bash
-          run: |
-            expr 1 + 1 > output.log
-        - shell: bash
-          run: |
-            echo "########"
-            cat output.log
-        - name: Upload output file
-          uses: actions/upload-artifact@v1
-          with:
-            name: output-log-file
-            path: output.log
+jobs:
+  example-job:
+    runs-on: ubuntu-latest
+    name: Save output
+    steps:
+      - shell: bash
+        run: |
+          expr 1 + 1 > output.log
+      - shell: bash
+        run: |
+          cat  output.log
+          echo "#####"
+      - name: Upload output file
+        uses: actions/upload-artifact@v1
+        with:
+          name: output-log-file
+          path: output.log
