--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,6 +5,7 @@ on: push
 jobs:
   example-job:
     name: Save output
+    runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v2
       - run: mkdir -p path/to/artifact
