--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,16 +1,18 @@
-name: Super-Linter
-
-# Run this workflow every time a new commit pushed to your repository
-on: push
+name: Publish Docker image
+on:
+  release:
+    types: [published]
 jobs:
-  example-job:
-    name: Save output
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: mkdir -p path/to/artifact
-      - run: echo hello > path/to/artifact/world.txt
-      - uses: actions/upload-artifact@v2
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
         with:
-          name: my-artifact
-          path: path/to/artifact/world.txt
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kingsdtest/actions-test
+          tag_with_ref: true
